CMake: Fix plugin target names to end in Plugin suffix
Pick-to: 6.2
Task-number: QTBUG-95731
Change-Id: I07addf322e0b42532a39f2c355f5c631b3cdb411
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/plugins/videonode/imx6/CMakeLists.txt
+++ b/src/plugins/videonode/imx6/CMakeLists.txt
@@ -4,9 +4,10 @@
 ## QSGVivanteVideoNodeFactory Plugin:
 #####################################################################
 
-qt_internal_add_plugin(QSGVivanteVideoNodeFactory
+qt_internal_add_plugin(QSGVivanteVideoNodeFactoryPlugin
     OUTPUT_NAME imx6vivantevideonode
     PLUGIN_TYPE video/videonode
+    CLASS_NAME QSGVivanteVideoNodeFactory
     SOURCES
         qsgvivantevideomaterial.cpp qsgvivantevideomaterial.h
         qsgvivantevideomaterialshader.cpp qsgvivantevideomaterialshader.h
