Recorder example: Build as app bundle on macOS/iOS
Add an Info.plist file for camera and microphone usage too.

Pick-to: 6.2
Change-Id: Ia1fafec2f01dcb1c3d85ce6efcc642fc9d5216b8
Reviewed-by: Piotr Srebrny <piotr.srebrny@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/examples/multimedia/video/recorder/CMakeLists.txt
+++ b/examples/multimedia/video/recorder/CMakeLists.txt
@@ -27,3 +27,8 @@ target_compile_definitions(recorder
   PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
 target_link_libraries(recorder
   PRIVATE Qt6::Core Qt6::Quick Qt6::Multimedia)
+
+set_target_properties(recorder PROPERTIES
+    MACOSX_BUNDLE TRUE
+    MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist.in
+)
