Don't run devices example on mobile platforms
devices example is a command line example and doesn't run properly on
Android and iOS.

Pick-to: 6.2
Change-Id: Iabe1185d5481b6fdfb1c47f9b71fe921d99eea23
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/examples/multimedia/devices/CMakeLists.txt
+++ b/examples/multimedia/devices/CMakeLists.txt
@@ -9,6 +9,11 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
+if(ANDROID OR IOS)
+    message(WARNING "This is a commandline tool that is not supported on mobile platforms")
+    return()
+endif()
+
 if(NOT DEFINED INSTALL_EXAMPLESDIR)
   set(INSTALL_EXAMPLESDIR "examples")
 endif()
