Migrate to fixed add_shaders prefix handling
Pick-to: 6.2
Change-Id: If2ea864268fa7d2e815243772e0fe27a3ce3bb0e
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -466,7 +466,7 @@ qt_internal_add_shaders(Multimedia "shaders"
     PRECOMPILE
     OPTIMIZED
     PREFIX
-        "/qt-project.org/multimedia/shaders"
+        "/qt-project.org/multimedia"
     FILES
         "shaders/vertex.vert"
         "shaders/externalsampler.vert"
