--- a/examples/multimedia/CMakeLists.txt
+++ b/examples/multimedia/CMakeLists.txt
@@ -5,7 +5,9 @@ add_subdirectory(devices)
 if(TARGET Qt::Widgets)
     add_subdirectory(spectrum)
     add_subdirectory(audiorecorder)
-    add_subdirectory(audiodevices)
+    if(NOT ANDROID AND NOT IOS)
+        add_subdirectory(audiodevices)
+    endif()
     add_subdirectory(audiosource)
     add_subdirectory(audiooutput)
 endif()
