Add tests for QMediaCaptureSession
Pick-to: 6.2
Change-Id: I6deb0f61e2c23ae931c9dd1a10efb27e2d8cbeef
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/tests/auto/integration/qmediacapturesession/CMakeLists.txt
+++ b/tests/auto/integration/qmediacapturesession/CMakeLists.txt
@@ -10,4 +10,5 @@ qt_internal_add_test(tst_qmediacapturesession
     PUBLIC_LIBRARIES
         Qt::Gui
         Qt::MultimediaPrivate
+        Qt::MultimediaWidgets
 )
