Exclude example from Android and iOS the right way
Don't add_subdirectory(devices) for Android and iOS, instead
of throwing a warning.

Pick-to: 6.2
Change-Id: Iaa4300d3ad875557f11504f80d0224d72debe2f9
Reviewed-by: Lars Knoll <lars.knoll@qt.io>

--- a/examples/multimedia/CMakeLists.txt
+++ b/examples/multimedia/CMakeLists.txt
@@ -1,7 +1,9 @@
 # Generated from multimedia.pro.
 
 add_subdirectory(audiodecoder)
-add_subdirectory(devices)
+if(NOT ANDROID AND NOT IOS)
+    add_subdirectory(devices)
+endif()
 if(TARGET Qt::Widgets)
     add_subdirectory(spectrum)
     add_subdirectory(audiorecorder)
