Android: Fix recording a video without audio issue
After fix you can mute/unmute input source.

Task-number: QTBUG-96097
Pick-to: 6.2
Change-Id: Idc47eb9a50d4970e96f4a5ed42db55d38e1aebeb
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -299,6 +299,7 @@ qt_internal_extend_target(Multimedia CONDITION ANDROID
         platform/android/audio/qandroidaudiodevice.cpp platform/android/audio/qandroidaudiodevice_p.h
         platform/android/audio/qopenslesengine.cpp platform/android/audio/qopenslesengine_p.h
         platform/android/common/qandroidaudiooutput_p.h
+        platform/android/common/qandroidaudioinput.cpp platform/android/common/qandroidaudioinput_p.h
         platform/android/audio/qandroidaudiodecoder.cpp platform/android/audio/qandroidaudiodecoder_p.h
         platform/android/common/qandroidglobal_p.h
         platform/android/common/qandroidmultimediautils.cpp platform/android/common/qandroidmultimediautils_p.h
