Add test for multiple source
Two tests added to verify for QTBUG-96456 issue.
One on unit and other on integration (tests against emu).
Also fixed tst_QMediaPlayerBackend to work on android.
Before it did not worked, because the test files were not copied
to apk file.

Pick-to: 6.2
Change-Id: Ie6c3c1ca16092ab377ca96e122a24131dfdc2335
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>

--- a/tests/auto/integration/qmediaplayerbackend/CMakeLists.txt
+++ b/tests/auto/integration/qmediaplayerbackend/CMakeLists.txt
@@ -8,7 +8,7 @@
 file(GLOB_RECURSE test_data_glob
     RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
     testdata/*)
-list(APPEND test_data ${test_data_glob})
+list(APPEND testdata_resource_files ${test_data_glob})
 
 qt_internal_add_test(tst_qmediaplayerbackend
     SOURCES
@@ -17,7 +17,14 @@ qt_internal_add_test(tst_qmediaplayerbackend
     PUBLIC_LIBRARIES
         Qt::Gui
         Qt::MultimediaPrivate
-    TESTDATA ${test_data}
+    TESTDATA ${testdata_resource_files}
+)
+
+qt_internal_add_resource(tst_qmediaplayerbackend "testdata"
+    PREFIX
+        "/"
+    FILES
+        ${testdata_resource_files}
 )
 
 ## Scopes:
