Enable VP9 codec on macOS 11
macOS 11 has builtin support for at least decoding VP9, but it is
for some reason not enabled by default. Enable it for Qt Multimedia.

Pick-to: 6.2
Change-Id: I0487e6d300f6890b635274ac77923fc623603b9b
Reviewed-by: Doris Verria <doris.verria@qt.io>
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>

--- a/src/multimedia/CMakeLists.txt
+++ b/src/multimedia/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(Qt6 COMPONENTS ShaderTools)
 qt_internal_find_apple_system_framework(FWCoreMedia CoreMedia) # special case
 qt_internal_find_apple_system_framework(FWCoreAudio CoreAudio) # special case
 qt_internal_find_apple_system_framework(FWAudioUnit AudioUnit) # special case
+qt_internal_find_apple_system_framework(FWVideoToolbox VideoToolbox) # special case
 qt_internal_find_apple_system_framework(FWAVFoundation AVFoundation) # special case
 
 qt_internal_add_module(Multimedia
@@ -382,6 +383,7 @@ qt_internal_extend_target(Multimedia CONDITION MACOS AND NOT WATCHOS
     PUBLIC_LIBRARIES
         ${FWAppKit}
         ${FWAudioUnit}
+        ${FWVideoToolbox}
 )
 
 qt_internal_extend_target(Multimedia CONDITION IOS AND NOT WATCHOS
