Camera example: Fix .plist file to build in iOS/macOS with qmake and cmake
- Fix format error in .plist.in file which was causing the permission
dialog to not show up.
- Provide separate .plist.in files for iOS and macOS so we can set
needed keys specific to the platforms.
- For qmake builds, fix the shared.pri to provide an INFOPLIST
dictionary for macOS. The provided one has iOS specific keys.

Fixes: QTBUG-97408
Pick-to: 6.2
Change-Id: Idd8e00c91b935328352cc513f419205303d9356d
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/examples/multimediawidgets/camera/CMakeLists.txt
+++ b/examples/multimediawidgets/camera/CMakeLists.txt
@@ -42,15 +42,21 @@ qt_add_executable(camera
 set_target_properties(camera PROPERTIES
     WIN32_EXECUTABLE TRUE
     MACOSX_BUNDLE TRUE
-    MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist.in
 )
+
+if(APPLE AND NOT IOS)
+    set_target_properties(camera PROPERTIES
+        MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/macos/Info.plist.in"
+    )
+elseif(IOS)
+    set_target_properties(camera PROPERTIES
+        MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/ios/Info.plist.in"
+    )
+endif()
 
 set_property(TARGET camera APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
              ${CMAKE_CURRENT_SOURCE_DIR}/android)
 
-target_include_directories(camera PUBLIC
-    ../../multimedia/shared
-)
 target_link_libraries(camera PUBLIC
     Qt::Core
     Qt::Gui
